--- a/client/src/app/features/base/table/components/table-editor/table-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/table-editor/table-editor-drawer.component.html
@@ -74,7 +74,7 @@
                 <div class="flex flex-col gap-1">
                   <label class="text-sm font-medium">ID type</label>
                   <div class="flex flex-col gap-2">
-                    <!-- 1. Integer  (Recommended default) -->
+                    <!-- Integer  (Recommended default) -->
                     <div class="flex gap-4">
                       <p-radiobutton
                         inputId="integer"
@@ -89,7 +89,7 @@
                       </div>
                     </div>
 
-                    <!-- 2. Big Integer -->
+                    <!-- Big Integer -->
                     <div class="flex gap-4">
                       <p-radiobutton
                         inputId="biginteger"
@@ -108,7 +108,7 @@
                       </div>
                     </div>
 
-                    <!-- 3. UUID -->
+                    <!-- UUID -->
                     <div class="flex gap-4">
                       <p-radiobutton
                         inputId="uuid"
@@ -127,7 +127,7 @@
                       </div>
                     </div>
 
-                    <!-- 4. Short ID (random 16 characters) -->
+                    <!-- Short ID (random 16 characters) -->
                     <div class="flex gap-4">
                       <p-radiobutton
                         inputId="shortid"
