refactor: improve tracking of columns in spreadsheet component
- Updated the tracking mechanism in spreadsheet.component.html to use column.id instead of the column object for better performance and accuracy.
- Enhanced the RecycleViewRepeaterStrategy to return the cached view after detecting changes, improving the efficiency of the virtual scroll implementation.

--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -264,7 +264,7 @@
         @for (
           column of tableColumnService.frozenColumns();
           let columnIndex = $index;
-          track column
+          track column.id
         ) {
           <ng-container
             *ngTemplateOutlet="headerCellTemplate; context: { column, columnIndex }"
@@ -285,7 +285,7 @@
         @for (
           column of tableColumnService.scrollableColumns();
           let columnIndex = $index;
-          track column
+          track column.id
         ) {
           <ng-container
             *ngTemplateOutlet="
@@ -957,7 +957,7 @@
           @for (
             column of tableColumnService.frozenColumns();
             let columnIndex = $index;
-            track column
+            track column.id
           ) {
             <ng-container
               *ngTemplateOutlet="footerCellTempTemplate; context: { column, columnIndex }"
@@ -979,7 +979,7 @@
           @for (
             column of tableColumnService.scrollableColumns();
             let columnIndex = $index;
-            track column
+            track column.id
           ) {
             <ng-container
               *ngTemplateOutlet="
