--- a/client/src/app/shared/spreadsheet/spreadsheet.component.scss
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.scss
@@ -122,6 +122,8 @@ $blank-row-height: 32px;
 
     .spreadsheet__toolbar {
       display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
       padding: {
         top: 16px;
         bottom: 16px;
