--- a/client/src/app/features/base/table/pages/table-list/table-list.component.html
+++ b/client/src/app/features/base/table/pages/table-list/table-list.component.html
@@ -1,3 +1,5 @@
+<p-toast appendTo="body" />
+
 <p-confirmdialog appendTo="body">
   <ng-template #message let-message>
     <div class="flex flex-col gap-4">
@@ -20,6 +22,12 @@
           <p>This will also delete all dependent objects such as views, foreign keys, etc.</p>
         </p-message>
       }
+      <div class="flex flex-col gap-1">
+        <label for="confirmation" class="text-sm font-medium">
+          Enter the table name to confirm:
+        </label>
+        <input pInputText [(ngModel)]="tableToDelete" id="confirmation" />
+      </div>
     </div>
   </ng-template>
 </p-confirmdialog>
