--- a/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/pages/table-detail/table-detail.component.html
@@ -15,19 +15,19 @@
     (onSave)="onRecordSave($event)"
   />
   @if (isLoading()) {
-    <div class="flex gap-2 px-[20px] py-[16px]">
-      <div
-        class="relative flex items-center pr-4 mr-2 after:content-[''] after:absolute after:right-0 after:top-2/3 after:-translate-y-2/3 after:h-2/3 after:w-[1px] after:bg-surface-200"
-      >
-        <p-skeleton width="100px" height="33px" />
+    <div class="flex gap-2 justify-between px-[20px] py-[16px]">
+      <div class="flex flex-wrap gap-2">
+        <div
+          class="relative flex items-center pr-4 mr-2 after:content-[''] after:absolute after:right-0 after:top-2/3 after:-translate-y-2/3 after:h-2/3 after:w-[1px] after:bg-surface-200"
+        >
+          <p-skeleton width="100px" height="33px" />
+        </div>
+        <p-skeleton width="90px" height="33px" />
+        <p-skeleton width="90px" height="33px" />
+        <p-skeleton width="90px" height="33px" />
+        <p-skeleton width="90px" height="33px" />
       </div>
-      <p-skeleton width="90px" height="33px" />
-      <p-skeleton width="90px" height="33px" />
-      <p-skeleton width="90px" height="33px" />
-      <p-skeleton width="90px" height="33px" />
-      <div class="ml-auto">
-        <p-skeleton width="224px" height="33px" />
-      </div>
+      <p-skeleton width="224px" height="33px" />
     </div>
     <div class="flex flex-col gap-3.5 px-[20px]">
       <p-skeleton width="100%" height="36px" />
