--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -38,44 +38,46 @@
     [style.paddingLeft.px]="tableService.config().sideSpacing"
     [style.paddingRight.px]="tableService.config().sideSpacing"
   >
-    <ng-container *ngTemplateOutlet="toolbarTemplate()"></ng-container>
-    @if ($any(tableService.config().toolbar).customize) {
-      <column-view-options
-        [sourceColumns]="sourceColumns()"
-        [visibleColumns]="tableColumnService.columns()"
-        (onToggle)="
-          $event.hidden
-            ? tableColumnService.hideColumn($event.column)
-            : tableColumnService.showColumn($event.column)
-        "
-        (onMove)="tableColumnService.moveColumn($event.column, $event.newIndex)"
-      />
-    }
-    @if ($any(tableService.config().toolbar).group) {
-      <data-view-options
-        type="group"
-        [sourceColumns]="sourceColumns()"
-        [currentColumns]="tableColumnService.groupedColumns()"
-        [limit]="3"
-        (onApply)="tableService.onApplyGroup($event)"
-      />
-    }
-    @if ($any(tableService.config().toolbar).sort) {
-      <data-view-options
-        type="sort"
-        [sourceColumns]="sourceColumns()"
-        [currentColumns]="tableColumnService.sortedColumns()"
-        (onApply)="tableService.onApplySort($event)"
-      />
-    }
-    @if ($any(tableService.config().toolbar).rowSize) {
-      <row-size-options
-        [rowSize]="$any(tableRowService.rowSize)"
-        (rowSizeChange)="tableRowService.setRowSize($event)"
-      />
-    }
+    <div class="flex flex-wrap gap-2">
+      <ng-container *ngTemplateOutlet="toolbarTemplate()"></ng-container>
+      @if ($any(tableService.config().toolbar).customize) {
+        <column-view-options
+          [sourceColumns]="sourceColumns()"
+          [visibleColumns]="tableColumnService.columns()"
+          (onToggle)="
+            $event.hidden
+              ? tableColumnService.hideColumn($event.column)
+              : tableColumnService.showColumn($event.column)
+          "
+          (onMove)="tableColumnService.moveColumn($event.column, $event.newIndex)"
+        />
+      }
+      @if ($any(tableService.config().toolbar).group) {
+        <data-view-options
+          type="group"
+          [sourceColumns]="sourceColumns()"
+          [currentColumns]="tableColumnService.groupedColumns()"
+          [limit]="3"
+          (onApply)="tableService.onApplyGroup($event)"
+        />
+      }
+      @if ($any(tableService.config().toolbar).sort) {
+        <data-view-options
+          type="sort"
+          [sourceColumns]="sourceColumns()"
+          [currentColumns]="tableColumnService.sortedColumns()"
+          (onApply)="tableService.onApplySort($event)"
+        />
+      }
+      @if ($any(tableService.config().toolbar).rowSize) {
+        <row-size-options
+          [rowSize]="$any(tableRowService.rowSize)"
+          (rowSizeChange)="tableRowService.setRowSize($event)"
+        />
+      }
+    </div>
     @if ($any(tableService.config().toolbar).search) {
-      <p-inputgroup class="w-3xs max-w-3xs ml-auto">
+      <p-inputgroup class="w-3xs max-w-3xs">
         <p-iconfield>
           <p-inputicon class="icon icon-search !z-2" />
           <input
