--- a/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
+++ b/client/src/app/features/base/table/components/record-editor/record-editor-drawer.component.html
@@ -32,6 +32,7 @@
             <text-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -40,6 +41,7 @@
             <long-text-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -48,6 +50,7 @@
             <integer-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -56,6 +59,7 @@
             <number-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -64,6 +68,7 @@
             <select-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -72,6 +77,7 @@
             <multi-select-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -80,6 +86,7 @@
             <checkbox-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -88,6 +95,7 @@
             <date-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -96,6 +104,7 @@
             <email-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -104,6 +113,7 @@
             <url-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -112,6 +122,7 @@
             <json-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -120,6 +131,7 @@
             <geo-point-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -128,6 +140,7 @@
             <reference-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -136,6 +149,7 @@
             <attachment-field-editor
               [field]="field"
               [(data)]="updatedRecord[field.name]"
+              (dataChange)="isDataChanged = true"
               [viewOnly]="viewOnly()"
               [label]="false"
             />
@@ -163,12 +177,14 @@
   </div>
 </ng-template>
 
+<p-confirmdialog appendTo="body" styleClass="max-w-100" />
+
 <p-drawer
-  [(visible)]="visible"
+  [visible]="visible()"
   position="right"
   [header]="mode() === 'view' ? 'View Record' : mode() === 'edit' ? 'Edit Record' : 'Add Record'"
   styleClass="!w-150 custom-drawer"
-  (onHide)="reset()"
+  (onHide)="onHide()"
 >
   <ng-template #content>
     <p-toast />
