--- a/client/src/app/shared/spreadsheet/components/view-options/row-size-options/row-size-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/row-size-options/row-size-options.component.html
@@ -3,7 +3,7 @@
 <p-button
   label="Row height"
   icon="icon icon-ruler"
-  variant="outlined"
+  variant="text"
   severity="secondary"
   (click)="menu.show($event)"
 />
