--- a/client/src/app/shared/field-system/editors/checkbox/editor.component.html
+++ b/client/src/app/shared/field-system/editors/checkbox/editor.component.html
@@ -16,17 +16,23 @@
       }
     </label>
   }
-  <p-checkbox
-    #input="ngModel"
-    [required]="field().required"
-    [invalid]="input.invalid && input.touched"
-    [inputId]="fieldName"
-    [pAutoFocus]="autoFocus()"
-    [readonly]="viewOnly()"
-    [(ngModel)]="data"
-    [binary]="true"
-    size="large"
-  />
+  <div class="flex items-center gap-2 h-[33px] px-3 border border-surface-300 rounded-md">
+    <p-checkbox
+      #checkbox
+      #input="ngModel"
+      [required]="field().required"
+      [invalid]="input.invalid && input.touched"
+      [inputId]="fieldName"
+      [pAutoFocus]="autoFocus()"
+      [readonly]="viewOnly()"
+      [(ngModel)]="data"
+      [binary]="true"
+      size="large"
+    />
+    <span class="text-sm">
+      {{ checkbox.checked ? 'TRUE' : 'FALSE' }}
+    </span>
+  </div>
   @if (input.invalid && input.touched) {
     <p-message severity="error" size="small" variant="simple">
       @if (input.hasError('required')) {
