--- a/client/src/app/shared/field-system/filter/filter-group.component.html
+++ b/client/src/app/shared/field-system/filter/filter-group.component.html
@@ -124,12 +124,13 @@
                     class="flex items-center gap-2 h-[33px] px-3 border border-surface-300 rounded-md"
                   >
                     <p-checkbox
+                      #checkbox
                       [(ngModel)]="it.value"
                       [pAutoFocus]="autoFocusIdx === i"
                       [binary]="true"
                     />
                     <span class="text-sm">
-                      {{ it.value ? 'Checked' : 'Unchecked' }}
+                      {{ checkbox.checked ? 'TRUE' : 'FALSE' }}
                     </span>
                   </div>
                 }
