--- a/client/src/app/shared/spreadsheet/components/field-cell/checkbox/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/checkbox/cell.component.html
@@ -1,1 +1,10 @@
-<p-checkbox [binary]="true" [readonly]="readonly" [(ngModel)]="data" (ngModelChange)="save()" />
+<p-checkbox
+  #checkbox
+  [binary]="true"
+  [readonly]="readonly"
+  [(ngModel)]="data"
+  (ngModelChange)="save()"
+/>
+<span class="text-sm min-w-10">
+  {{ checkbox.checked ? 'TRUE' : 'FALSE' }}
+</span>
