--- a/client/src/app/shared/spreadsheet/components/view-options/data-view-options/data-view-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/data-view-options/data-view-options.component.html
@@ -84,10 +84,10 @@
       }
       <div class="flex justify-end gap-2 flex-1">
         <p-button
-          label="Clear"
+          label="Reset"
           severity="secondary"
           [text]="true"
-          (click)="clear(); popover.hide()"
+          (click)="reset(); popover.hide()"
         />
         <p-button
           label="Apply changes"
