--- a/client/src/app/shared/spreadsheet/components/view-options/data-filter-options/data-filter-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/data-filter-options/data-filter-options.component.html
@@ -11,10 +11,10 @@
     <div class="flex items-center justify-between">
       <div class="flex justify-end gap-2 flex-1">
         <p-button
-          label="Clear"
+          label="Reset"
           severity="secondary"
           [text]="true"
-          (click)="clear(); popover.hide()"
+          (click)="reset(); popover.hide()"
         />
         <p-button
           label="Apply changes"
